--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <h1>LISD Help Document Finder</h1>
 </div>
 
-<a href="https://www.deforest.k12.wi.us/district/learning-information-systems.cfm">LISD Home Page</a> ｜ 
-<a href="https://lisd.deforestschools.org/">Tech Request System</a> ｜ 
+<a href="https://www.deforest.k12.wi.us/district/learning-information-systems.cfm" target="_blank">LISD Home Page</a> ｜ 
+<a href="https://lisd.deforestschools.org/" target="_blank">Tech Request System</a> ｜ 
 Help Desk: <strong>608-842-6535</strong>
 
 <h3>What do you need help with?</h3>
