--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ html, body {
     <div id="links">
       <a href="https://www.deforest.k12.wi.us/district/learning-information-systems.cfm" target="_blank" rel="noopener noreferrer">LISD Home Page</a>｜
       <a href="https://lisd.deforestschools.org/" target="_blank" rel="noopener noreferrer">Tech Request System</a>｜
-      Help Desk: <strong>608-842-6535</strong>
+      Help Desk: <strong>608-842-6535</strong>｜
+      <a href="ChatGPT synthesis.pdf">How was this made?</a>
     </div>
 
     <div id="mainContent">
