--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ html, body {
       <a href="https://www.deforest.k12.wi.us/district/learning-information-systems.cfm" target="_blank" rel="noopener noreferrer">LISD Home Page</a>｜
       <a href="https://lisd.deforestschools.org/" target="_blank" rel="noopener noreferrer">Tech Request System</a>｜
       Help Desk: <strong>608-842-6535</strong>｜
-      <a href="ChatGPT synthesis.pdf">How was this made?</a>
+      <a href="ChatGPT synthesis.pdf">&#128161;</a>
     </div>
 
     <div id="mainContent">
