--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ html, body {
     <div id="links">
       <a href="https://www.deforest.k12.wi.us/district/learning-information-systems.cfm" target="_blank" rel="noopener noreferrer">LISD</a>｜
       <a href="https://lisd.deforestschools.org/" target="_blank" rel="noopener noreferrer">TR System</a>｜
-      <a href="https://forms.gle/nKk369jjDvUSb4aM9">Request Resource</a>｜
+      <a href="https://forms.gle/nKk369jjDvUSb4aM9" target="_blank" rel="noopener noreferrer">Request Resource</a>｜
       Help Desk: <strong>608-842-6535</strong>｜
       <a href="ChatGPT query.pdf" target="_blank" rel="noopener noreferrer">&#128161;</a>
     </div>
